designer-standalone: use shared GWT props + tweak memory/resource settings