@@ -625,7 +625,19 @@
   <build>
     <finalName>${project.artifactId}</finalName>
     <outputDirectory>src/main/webapp/WEB-INF/classes</outputDirectory>
-
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>false</filtering>
+      </resource>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+        <includes>
+          <include>org/jbpm/designer/jBPMDesigner.gwt.xml</include>
+        </includes>
+      </resource>
+    </resources>
     <plugins>
 
       <plugin>
@@ -633,7 +645,6 @@
         <artifactId>gwt-maven-plugin</artifactId>
         <configuration>
           <deploy>${project.build.directory}/gwt-symbols-deploy</deploy>
-          <localWorkers>1</localWorkers>
           <extraJvmArgs>-Xmx2048m -XX:MaxPermSize=256m -Xms1024m -XX:PermSize=128m -Xss1M -XX:CompileThreshold=7000 -Derrai.jboss.home=${errai.jboss.home} -Derrai.marshalling.server.classOutput=${project.build.outputDirectory}</extraJvmArgs>
           <module>org.jbpm.designer.FastCompiledjBPMDesigner</module>
           <logLevel>INFO</logLevel>
@@ -737,7 +748,7 @@
           <execution>
             <id>gwt-compile</id>
             <goals>
-              <goal>resources</goal>
+              <!-- Do not use 'resources' goal as it does not play well with filtered resources. -->
               <goal>compile</goal>
             </goals>
           </execution>
@@ -863,6 +874,9 @@
           <name>full</name>
         </property>
       </activation>
+      <properties>
+        <gwt.compiler.localWorkers>4</gwt.compiler.localWorkers>
+      </properties>
       <build>
         <plugins>
           <plugin><!-- Keep in sync with soa profile -->
@@ -872,6 +886,7 @@
               <!-- Build all GWT permutations and optimize them -->
               <module>org.jbpm.designer.jBPMDesigner</module>
               <draftCompile>false</draftCompile>
+              <extraJvmArgs>-Xms512m -Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=256m -Xss1M</extraJvmArgs>
             </configuration>
           </plugin>
         </plugins>
